# optimal-charge-security-camera

./: .gitignore  AGENTS.md  CODE-PLAN.md  ISSUES.md  LICENSE  PLAN.md  PLAN2.md  README.md  UNIFIED_CONTROLLER_COMPLETE.md  batch_simulation.py  battery_results.py  benchmark_power.py  ci-tests.sh  config.jsonc  config1 copy 2.jsonc  config1 copy.jsonc  config1.jsonc  config2 copy.jsonc  config2.jsonc  config3 copy 2.jsonc  config3 copy.jsonc  config3.jsonc  controller-unified.json  generate_training_data.py  lefthook.yml  load_controller.py  main.py  model_results.py  preprocess_data.py  pyproject.toml  results.py  run_pipeline.sh  simulation_runner.py  start.sh  test_quick_fix.py  test_results.csv  tests.sh  train_controller.py  train_custom_controller.py  tree-pipeline.sh  (+2 more)
_backup/: batch_simulation.py  config.jsonc  energy_usage_summary.json  generate_training_data.py  results.py  run_pipeline.sh  simulation_runner.py  train_custom_controller.py
config/: config1.jsonc  config2 copy 2.jsonc  config3.jsonc  config4.jsonc  default.yaml
config2/: config1.jsonc  config2.jsonc  config3.jsonc  config4.jsonc  config5.jsonc  config6.jsonc  config7.jsonc  config8.jsonc  config9.jsonc
config3/: config1.jsonc  config2.jsonc  config3.jsonc  config4.jsonc  config5.jsonc  config6.jsonc  config7.jsonc  config8.jsonc  config9.jsonc
datasets/: model-data.csv
docs/: AGENTS.md  CLI.md  IMPLEMENTATION.md  docs.html  index.html  script.js  styles.css
model-data/: power_profiles.json
results/: CA-20251210_134558-fall-metadata.json  CA-20251210_134558-spring-metadata.json  CA-20251210_134558-summer-metadata.json  CA-20251210_134558-winter-metadata.json  CA-20251210_134731-fall-metadata.json  CA-20251210_134731-spring-metadata.json  CA-20251210_134731-summer-metadata.json  CA-20251210_134731-winter-metadata.json  (+59 more)
(+99 files in other folders)
