[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimal-charge-security-camera"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "pillow",
  "loguru",
  "torch==2.3.1",
  "torchvision==0.18.1",
  "opencv-python>=4.11.0.86",
  "codecarbon>=3.0.7",
  "ultralytics",
  "pyyaml",
]

[project.scripts]
ocs-run = "ocs_cam.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "lefthook>=2.0.2",
    "pytest>=8.4.2",
]
