[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimal-charge-security-camera"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.0.0",
  "loguru",
  "pulp>=2.8.0",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "lefthook>=2.0.2",
    "pytest>=8.4.2",
]
