[project]
name = "oc-security-camera-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lefthook>=2.0.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pulp>=3.3.0",
    "pytest>=9.0.1",
    "ultralytics>=8.3.233",
    "python-dotenv>=1.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "jsonschema>=4.25.1",
]



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=long",
    "-W error",
    "--strict-markers",
    "--strict-config"
]
pythonpath = ["."]
